--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.13",
-    "reactotron-react-native": "^4.0.2"
+    "reactotron-react-native": "^4.0.2",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
