--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "^2.0.0-alpha.23",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.0.3",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.13",
